# tidegate

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.old.md  README.md  THREAT_MODEL.md  UNKNOWNS.md  docker-compose.yaml  pyproject.toml  skills-lock.json  tidegate.yaml
.agents/: AGENTS-SETUP.md  README.md  execution-tracking.vars.json  session.json  specwatch-ignore  status-cache.json
.agents/skills-drafts/: README.md
.qoder/skills/: swain-push
.tickets/: tid-29mf.md  tid-2b47.md  tid-2n4k.md  tid-2t2g.md  tid-36kf.md  tid-49k5.md  tid-8gwz.md  tid-8oof.md  tid-9bxf.md  tid-9jql.md  tid-9vvq.md  tid-buzw.md  tid-ca33.md  tid-cj3p.md  tid-esy8.md  tid-h5x7.md  tid-ixty.md  tid-jbo8.md  tid-jl64.md  tid-l9ds.md  tid-l9on.md  tid-nkxq.md  tid-p1j4.md  tid-r4yo.md  tid-rdnw.md  tid-rvfn.md  tid-slcf.md  tid-x6n3.md  tid-xs9m.md  tid-yyyq.md  tid-z42f.md  tid-z85k.md  tid-zcc4.md
docs/: README.md  ROADMAP.md  personas.md  testing.md
docs/adr/: 001-seccomp-notify-l1-interception.md  README.md  (+2 more)
egress-proxy/: squid.conf
gateway/: Dockerfile  package-lock.json  package.json  test-echo-server.ts  tsconfig.json
hello-world/: server.ts
mappings/: hello-world.yaml
scanner/: requirements.txt  scanner.py
skills/: swain  swain-design  swain-do  swain-doctor  swain-help  swain-init  swain-keys  swain-push  swain-release  swain-search  swain-session  swain-stage  swain-status  swain-update
tests/: conftest.py  test_audit.py  test_config.py  test_deny.py  test_integration.py  test_proxy.py  test_scanner_checksums.py  test_scanner_engine.py  test_scanner_patterns.py
(+505 files in other folders)
