[project]
name = "tidegate-gateway"
version = "0.1.0"
description = "MCP scanning gateway — L2 enforcement seam for Tidegate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "python-stdnum>=2.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]
